<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_margin="@dimen/_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameContainer"
        android:textColor="@color/grayish"
        android:text="@string/enter_name"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp"
        android:textSize="@dimen/_16sp"
        app:layout_constraintRight_toLeftOf="@id/edittextname"/>
    <EditText
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:id="@+id/edittextname"
        android:hint="@string/enter_name"
        android:layout_margin="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/nameContainer"
        android:padding="@dimen/_10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordContainer"
        android:textColor="@color/grayish"
        android:text="@string/enter_pass"
        app:layout_constraintTop_toBottomOf="@id/nameContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp"
        android:textSize="@dimen/_16sp"
        app:layout_constraintRight_toLeftOf="@id/edittextpass"/>

    <EditText
        android:id="@+id/edittextpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:hint="@string/enter_pass"
        android:inputType="text"
        android:padding="@dimen/_10dp"
        app:layout_constraintLeft_toRightOf="@id/passwordContainer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextname" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonlogin"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        android:layout_margin="@dimen/_10dp"
        android:padding="@dimen/_10dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageprofile"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:contentDescription="@string/profileimage"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginnameContainer"
        android:textColor="@color/grayish"
        android:text="@string/name"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/imageprofile"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp"
        android:textSize="@dimen/_16sp"
        app:layout_constraintRight_toLeftOf="@id/loginname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginname"
        android:textColor="@color/grayish"
        android:text=""
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/imageprofile"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp"
        android:textSize="@dimen/_16sp"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/male"
            android:layout_margin="@dimen/_10dp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/female"
            android:layout_margin="@dimen/_10dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:id="@+id/other"
            android:layout_margin="@dimen/_10dp"
            />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>